[gd_scene load_steps=2 format=3 uid="uid://kodydy1u48ke"]

[ext_resource type="Script" path="res://scripts/MaterialRow.gd" id="1_2i0m5"]

[node name="MaterialRow" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2i0m5")

[node name="MaterialName" type="Label" parent="."]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Material"

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2

[node name="HairCount" type="Label" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "1"
horizontal_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2

[node name="BodyCount" type="Label" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "1"
horizontal_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="."]
layout_mode = 2

[node name="ArmsCount" type="Label" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "1"
horizontal_alignment = 1

[node name="VSeparator4" type="VSeparator" parent="."]
layout_mode = 2

[node name="WaistCount" type="Label" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "1"
horizontal_alignment = 1

[node name="VSeparator5" type="VSeparator" parent="."]
layout_mode = 2

[node name="LegsCount" type="Label" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "1"
horizontal_alignment = 1

[node name="VSeparator6" type="VSeparator" parent="."]
layout_mode = 2

[node name="TotalCount" type="Label" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "1"
horizontal_alignment = 2
